[package]
name = "kv-asm"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
authors = ["Cavey Cool <caveycool@gmail.com>"]
description = "Quote-free inline and global sBPF assembly macros for Solana programs (kv_asm! and kv_global_asm!)."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cavemanloverboy/kv-asm"
homepage = "https://github.com/cavemanloverboy/kv-asm"
documentation = "https://docs.rs/kv-asm"
keywords = ["solana", "sbpf", "bpf", "asm", "macro"]
categories = ["development-tools", "no-std"]
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
